@@ -54,6 +54,29 @@ class ZMCheckoutShippingAddressController extends ZMController {
         parent::__destruct();
     }
 
+    /**
+     * Check cart state.
+     *
+     * @return ZMView A <code>ZMView</code>  or <code>null</code>.
+     */
+    function checkCart() {
+    global $zm_cart;
+
+        if ($zm_cart->isEmpty()) {
+            return $this->findView("empty_cart");
+        }
+
+        if (!$zm_cart->readyForCheckout()) {
+            return $this->findView("cart_not_ready");
+        }
+
+        if ($zm_cart->isVirtual()) {
+            return $this->findView("cart_is_virtual");
+        }
+
+        return null;
+    }
+
 
     /**
      * Process a HTTP GET request.
@@ -63,6 +86,10 @@ class ZMCheckoutShippingAddressController extends ZMController {
      */
     function processGet() {
     global $zm_request, $zm_crumbtrail, $zm_cart, $zm_addresses;
+
+        if (null !== ($view = $this->checkCart())) {
+            return $view;
+        }
 
         $zm_crumbtrail->addCrumb("Checkout", zm_secure_href(FILENAME_CHECKOUT_SHIPPING, '', false));
         $zm_crumbtrail->addCrumb(zm_title(false));
@@ -75,6 +102,44 @@ class ZMCheckoutShippingAddressController extends ZMController {
         $this->exportGlobal("zm_address", $address);
 
         return $this->findView();
+    }
+
+    /**
+     * Process a HTTP POST request.
+     * 
+     * @return ZMView A <code>ZMView</code> that handles presentation or <code>null</code>
+     * if the controller generates the contents itself.
+     */
+    function processPost() {
+    global $zm_request, $zm_cart, $zm_addresses;
+
+        if (null !== ($view = $this->checkCart())) {
+            return $view;
+        }
+
+        // if address field in request, it's a select; otherwise a new address
+        $addressId = $zm_request->getParameter('address', null);
+
+        if (null !== $addressId) {
+            $zm_cart->setShippingAddressId($addressId);
+        } else {
+            // TODO: create business objects to share logic...
+            // use address book controller to process
+            $abc = $this->create("AddressBookProcessController");
+            $view = $abc->createAddress();
+            $address = $abc->getGlobal('zm_address');
+            if (0 == $address->getId()) {
+                $this->exportGlobal("zm_address", $address);
+                $addressList = $zm_addresses->getAddressesForAccountId($zm_request->getAccountId());
+                $this->exportGlobal("zm_addressList", $addressList);
+                return $this->findView();
+            }
+            // new address
+            $address = $abc->getGlobal('zm_address');
+            $zm_cart->setShippingAddressId($address->getId());
+        }
+
+        return $this->findView('success');
     }
 
 }
